김승현:0121: main에서작업했...어요..

--- a/AskIT/src/main/webapp/WEB-INF/web.xml
+++ b/AskIT/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,17 @@
   	<url-pattern>*.me</url-pattern>
   </servlet-mapping>
   
+  <!-- 메인 -->
+  <servlet>
+     <servlet-name>main</servlet-name>
+     <servlet-class>com.itask.app.dev.MainFrontController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+     <servlet-name>main</servlet-name>
+     <url-pattern>*.main</url-pattern>
+  </servlet-mapping>
+  
+  
   <!-- 개발 -->
   <servlet>
      <servlet-name>Dev</servlet-name>
